# sonar-api

./: .dockerignore  .env.example  .gitattributes  .gitignore  .loa-aleph.lock.json  .loa-version.json  .loa.config.yaml  .loa.config.yaml.example  .railwayignore  .skill-loop-progress.md  AGENTS.md  AGENTS.md.checksum  ARCHITECTURE.md  BUTTERFREEZONE.md  CARE.md  CHANGELOG.md  CLAUDE.md  Caddyfile  Dockerfile.belt  Dockerfile.belt-ponder  Dockerfile.erpc  Dockerfile.gateway  Dockerfile.kitchen  Dockerfile.svm-webhook  INSTALLATION.md  README.md  SCALE.md  SECURITY.md  SOUL.md  beacon.yaml  config.1.yaml  config.10.yaml  config.42161.yaml  config.7777777.yaml  config.80094.yaml  config.8453.yaml  config.bench.eth.yaml  config.mibera.yaml  config.probe.yaml  config.robinhood-sidecar.yaml  (+18 more)
.claude/adapters/: cheval.py  pyproject.toml
.claude/adapters/loa_cheval/: audit_envelope.py  doctor.py  economy.py  health.py  types.py
.claude/adapters/loa_cheval/audit/: modelinv.py
.claude/adapters/loa_cheval/config/: loader.py
.claude/adapters/loa_cheval/metering/: rollup.py
.claude/adapters/loa_cheval/providers/: __init__.py  anthropic_adapter.py  anthropic_streaming.py  base.py  claude_headless_adapter.py  codex_headless_adapter.py  cursor_headless_adapter.py  gemini_headless_adapter.py  google_adapter.py  (+4 more)
.claude/adapters/tests/: test_aggregate_expected_count.py  test_anthropic_effort.py  test_anthropic_integration.py  test_anthropic_refusal_fallback.py  test_anthropic_streaming_cache_tokens.py  test_audit_envelope_strict_verify.py  test_bedrock_forward_routing.py  test_chain_walk_audit_envelope.py  test_claude_headless_adapter.py  test_cli_adapter_dispatch.py  test_codex_headless_adapter.py  test_cursor_headless_adapter.py  test_flatline_routing.py  test_gemini_headless_adapter.py  test_google_integration.py  test_grok_headless_adapter.py  test_headless_argv_nul_robustness.py  test_headless_subprocess_pgkill.py  test_model_auth_metadata_validator.py  test_modelinv_loop_telemetry.py  test_openai_integration.py  test_parity_fixture_generator.py  test_preflight_preempt_modelinv.py  test_sse_deadline_shim_uniformity.py  test_streaming_exceptions.py  test_streaming_recovery_parity.py  test_substrate_health.py
(+1888 files in other folders)
