[build-system]
requires = ["setuptools>=64"]
# #982: was "setuptools.backends._legacy:_Backend" — a backend path that no
# setuptools release provides, so every `pip install .claude/adapters` died
# with BackendUnavailable before dependency resolution. build_meta is the
# real setuptools PEP-517 backend.
build-backend = "setuptools.build_meta"

[project]
name = "loa-cheval"
version = "1.0.0"
description = "Hounfour multi-model provider adapter for the Loa framework"
requires-python = ">=3.8"
# #982 (secondary): runtime deps that were previously self-admitted gaps —
# loa_cheval.jcs requires rfc8785 (jcs.py: RFC 8785 canonicalization for the
# MODELINV audit envelope; absent → fail-soft [AUDIT-EMIT-FAILED], envelope
# silently suppressed) and load_advisor_strategy requires jsonschema>=4.21
# (absent → hard ModuleNotFoundError blocking every cheval invocation on a
# clean install).
dependencies = ["rfc8785>=0.1.4", "jsonschema>=4.21"]

[project.optional-dependencies]
# Sprint 4A (cycle-102, AC-4.5e): httpx[http2] pulls in h2 + hpack so the new
# `http_post_stream()` transport in providers/base.py negotiates HTTP/2 via
# ALPN. HTTP/2 is the preferred path for the streaming transport because
# multiplexing + PING-frame keepalive survives Cloudflare/ALB idle timers
# more robustly than HTTP/1.1. The `h2`-missing fallback in
# `_detect_http2_available` keeps HTTP/1.1 streaming functional when h2
# isn't installed (graceful degradation, not a hard requirement).
full = ["httpx[http2]>=0.24.0", "pyyaml>=6.0"]
dev = ["pytest>=7.0", "pytest-httpx>=0.30.0"]

# (no [project.scripts] — iter-1 B1: the old `cheval = loa_cheval.__main__:main`
# entry pointed at a module that does not exist; the real CLI is
# .claude/adapters/cheval.py, invoked by path (see model-adapter.sh). With the
# build backend repaired, pip would otherwise ship a broken `cheval` command.)

[tool.setuptools.packages.find]
where = ["."]
include = ["loa_cheval*"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require live network access or external services (deselect with '-m \"not integration\"')",
]
